--- a/feedback_analysis/analysis.ipynb
+++ b/feedback_analysis/analysis.ipynb
@@ -449,13 +449,13 @@
     "\n",
     "# Add annotation for significance idfferences\n",
     "# 4-1\n",
-    "x1, x2 = 0, 0.4  # Positions of the bars to annotate (blue and green)\n",
+    "x1, x2 = 0, 0.4  # Positions of the bars to annotate \n",
     "y, h, col = max(avgs['4-1']) + max(ses['4-1']) + 0.1, 0.1, 'black'  # Line height and color\n",
     "plt.plot([x1, x1, x2, x2], [y, y+h, y+h, y], lw=1.5, c=col)  # Horizontal and vertical lines\n",
     "plt.text((x1 + x2) * 0.5, y + h, '**', ha='center', va='bottom', color=col)\n",
     "\n",
     "# 4-2\n",
-    "x1, x2 = 1, 1.4  # Positions of the bars to annotate (blue and green)\n",
+    "x1, x2 = 1, 1.4  # Positions of the bars to annotate \n",
     "y, h, col = max(avgs['4-2']) + max(ses['4-2']) + 0.1, 0.1, 'black'  # Line height and color\n",
     "plt.plot([x1, x1, x2, x2], [y, y+h, y+h, y], lw=1.5, c=col)  # Horizontal and vertical lines\n",
     "plt.text((x1 + x2) * 0.5, y + h, '***', ha='center', va='bottom', color=col)\n",
@@ -465,7 +465,7 @@
     "plt.text((x1 + x2) * 0.5, y + h, '***', ha='center', va='bottom', color=col)\n",
     "\n",
     "# 4-3\n",
-    "x1, x2 = 2, 2.4  # Positions of the bars to annotate (blue and green)\n",
+    "x1, x2 = 2, 2.4  # Positions of the bars to annotate \n",
     "y, h, col = max(avgs['4-3']) + max(ses['4-3']) + 0.1, 0.1, 'black'  # Line height and color\n",
     "plt.plot([x1, x1, x2, x2], [y, y+h, y+h, y], lw=1.5, c=col)  # Horizontal and vertical lines\n",
     "plt.text((x1 + x2) * 0.5, y + h, '**', ha='center', va='bottom', color=col)\n",
@@ -986,7 +986,7 @@
     "\n",
     "# Add annotation for significant difference\n",
     "# 4-1 and 4-2\n",
-    "x1, x2 = 0, 1  # Positions of the bars to annotate (blue and green)\n",
+    "x1, x2 = 0, 1  # Positions of the bars to annotate \n",
     "y, h, col = max(y) + max(se) + 0.1, 0.1, 'black'  # Line height and color\n",
     "plt.plot([x1, x1, x2, x2], [y, y+h, y+h, y], lw=1.5, c=col)  # Horizontal and vertical lines\n",
     "plt.text((x1 + x2) * 0.5, y + h, '***', ha='center', va='bottom', color=col)\n",
@@ -1912,11 +1912,11 @@
     "\n",
     "# Add annotation for significance idfferences\n",
     "# 4-1\n",
-    "x1, x2 = 0, 0.2  # Positions of the bars to annotate (blue and green)\n",
+    "x1, x2 = 0, 0.2  # Positions of the bars to annotate \n",
     "y, h, col = max(avg_likes['4-1']) + max(se_likes['4-1']) + 0.1, 0.1, 'black'  # Line height and color\n",
     "plt.plot([x1, x1, x2, x2], [y, y+h, y+h, y], lw=1.5, c=col)  # Horizontal and vertical lines\n",
     "plt.text((x1 + x2) * 0.5, y + h, '*', ha='center', va='bottom', color=col)\n",
-    "x1, x2 = 0.2, 0.4  # Positions of the bars to annotate (orange and green)\n",
+    "x1, x2 = 0.2, 0.4  # Positions of the bars to annotate \n",
     "y, h, col = max(avg_likes['4-1']) + max(se_likes['4-1']) + 0.4, 0.1, 'black'  # Line height and color\n",
     "plt.plot([x1, x1, x2, x2], [y, y+h, y+h, y], lw=1.5, c=col)  # Horizontal and vertical lines\n",
     "plt.text((x1 + x2) * 0.5, y + h, '***', ha='center', va='bottom', color=col)\n",
@@ -2585,222 +2585,6 @@
     "plt.title('Enjoyment Scores and Rank 1 Numbers')\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Favourite subjects"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4-1\n",
-      "Q8\n",
-      "Languages and Literature    1\n",
-      "STEM                        7\n",
-      "STEM and Social Sciences    2\n",
-      "Social Sciences and Arts    4\n",
-      "dtype: int64\n",
-      "Q9\n",
-      "Languages and Literature    6\n",
-      "STEM                        6\n",
-      "Social Sciences and Arts    2\n",
-      "dtype: int64\n",
-      "4-2\n",
-      "Q8\n",
-      "Languages and Literature    1\n",
-      "STEM                        7\n",
-      "STEM and Social Sciences    1\n",
-      "Social Sciences and Arts    6\n",
-      "dtype: int64\n",
-      "Q9\n",
-      "Languages and Literature    4\n",
-      "STEM                        9\n",
-      "Social Sciences and Arts    2\n",
-      "dtype: int64\n",
-      "4-3\n",
-      "Q8\n",
-      "STEM                         1\n",
-      "STEM and Social Sciences    11\n",
-      "Social Sciences and Arts     1\n",
-      "dtype: int64\n",
-      "Q9\n",
-      "Languages and Literature    2\n",
-      "STEM                        7\n",
-      "STEM & Languages            1\n",
-      "STEM and Social Sciences    1\n",
-      "Social Sciences and Arts    2\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "fav1 = pretest1.groupby('Q8').size()\n",
-    "help1 = pretest1.groupby('Q9').size()\n",
-    "print('4-1')\n",
-    "print(fav1)\n",
-    "print(help1)\n",
-    "\n",
-    "fav2 = pretest2.groupby('Q8').size()\n",
-    "help2 = pretest2.groupby('Q9').size()\n",
-    "print('4-2')\n",
-    "print(fav2)\n",
-    "print(help2)\n",
-    "\n",
-    "fav3 = pretest3.groupby('Q8').size()\n",
-    "help3 = pretest3.groupby('Q9').size()\n",
-    "print('4-3')\n",
-    "print(fav3)\n",
-    "print(help3)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Most pupils like STEM subjects the most and say they need help with it the most."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Correlation between the questions 1,2, 3 and 4 in pretest and the results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average of Q1 for 4-1\n",
-      "1.93\n",
-      "Average of Q1 for 4-2\n",
-      "1.93\n",
-      "Average of Q1 for 4-3\n",
-      "1.85\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Q1: Have you ever interacted with a social robot?\n",
-    "\n",
-    "avg1_q1 = pretest1['Q1'].mean()\n",
-    "se1_q1 = pretest1['Q1'].std() / np.sqrt(n1)\n",
-    "avg2_q1 = pretest2['Q1'].mean()\n",
-    "se2_q1 = pretest2['Q1'].std() / np.sqrt(n2)\n",
-    "avg3_q1 = pretest3['Q1'].mean()\n",
-    "se3_q1 = pretest3['Q1'].std() / np.sqrt(n3)\n",
-    "\n",
-    "print('Average of Q1 for 4-1')\n",
-    "print('{:.2f}'.format(avg1_q1))\n",
-    "print('Average of Q1 for 4-2')\n",
-    "print('{:.2f}'.format(avg2_q1))\n",
-    "print('Average of Q1 for 4-3')\n",
-    "print('{:.2f}'.format(avg3_q1))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Correlation with number of correct answers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average of Q2, Q3 and Q4 for 4-1 out of 5\n",
-      "4.55\n",
-      "Average correct answers for 4-1 out of 3\n",
-      "2.12\n",
-      "\n",
-      "Average of Q2, Q3 and Q4 for 4-2 out of 5\n",
-      "4.58\n",
-      "Average correct answers for 4-2 out of 3\n",
-      "1.05\n",
-      "\n",
-      "Average of Q2, Q3 and Q4 for 4-2 out of 5\n",
-      "4.54\n",
-      "Average correct answers for 4-2 out of 3\n",
-      "1.60\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Class 4-1\n",
-    "\n",
-    "# Average of Q2, Q3 and Q4\n",
-    "n1 = pretest1.shape[0]\n",
-    "avg2 = pretest1['Q2'].mean()\n",
-    "avg3 = pretest1['Q3'].mean()\n",
-    "avg4 = pretest1['Q4'].mean()\n",
-    "avg_41 = (avg2 + avg3 + avg4) / 3\n",
-    "se_41 = (pretest1['Q2'].std() + pretest1['Q3'].std() + pretest1['Q4'].std()) / (3 * np.sqrt(n1))\n",
-    "\n",
-    "print('Average of Q2, Q3 and Q4 for 4-1 out of 5')\n",
-    "print('{:.2f}'.format(avg_41))\n",
-    "print('Average correct answers for 4-1 out of 3')\n",
-    "print('{:.2f}'.format(avg_class1)) \n",
-    "print()\n",
-    "# Class 4-2\n",
-    "\n",
-    "# Average of Q2, Q3 and Q4\n",
-    "n2 = pretest2.shape[0]\n",
-    "avg2 = pretest2['Q2'].mean()\n",
-    "avg3 = pretest2['Q3'].mean()\n",
-    "avg4 = pretest2['Q4'].mean()\n",
-    "avg_42 = (avg2 + avg3 + avg4) / 3\n",
-    "se_42 = (pretest2['Q2'].std() + pretest2['Q3'].std() + pretest2['Q4'].std()) / (3 * np.sqrt(n2))\n",
-    "\n",
-    "print('Average of Q2, Q3 and Q4 for 4-2 out of 5')\n",
-    "print('{:.2f}'.format(avg_42))\n",
-    "print('Average correct answers for 4-2 out of 3')\n",
-    "print('{:.2f}'.format(avg_class2)) \n",
-    "print()\n",
-    "\n",
-    "# Class 4-3\n",
-    "\n",
-    "# Average of Q2, Q3 and Q4\n",
-    "n3 = pretest3.shape[0]\n",
-    "avg2 = pretest3['Q2'].mean()\n",
-    "avg3 = pretest3['Q3'].mean()\n",
-    "avg4 = pretest3['Q4'].mean()\n",
-    "avg_43 = (avg2 + avg3 + avg4) / 3\n",
-    "se_42 = (pretest3['Q2'].std() + pretest3['Q3'].std() + pretest3['Q4'].std()) / (3 * np.sqrt(n3))\n",
-    "\n",
-    "print('Average of Q2, Q3 and Q4 for 4-2 out of 5')\n",
-    "print('{:.2f}'.format(avg_43))\n",
-    "print('Average correct answers for 4-2 out of 3')\n",
-    "print('{:.2f}'.format(avg_class3)) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The averages of the questions 2, 3 and 4 are similar for the 3 groups so we can't extract an insightful pattern between these averages and other scores."
    ]
   },
   {
